# suboptimal

./: Cargo.toml  README.md  README.org
src/: main.rs
