[package]
name = "suboptimal"
version = "0.1.0"
authors = ["Tatsu <mail@alexanderphillips.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
walkdir = "2.3.1"
md5 = "0.7.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
